@@ -65,3 +65,5 @@ body {
 @import "ember-modal-dialog/ember-modal-appearance";
 
 @import 'components/users/user-avatar.scss';
+@import 'components/quick-jump.scss';
+@import 'typeahead.scss';
