@@ -1,0 +1,7 @@
+.quick-jump {
+    width: 70%;
+
+    .input-group {
+	width: 100%;
+    }
+}
