@@ -1,0 +1,47 @@
+$width: 100%;
+
+.twitter-typeahead {
+
+    width: $width;
+
+    .tt-query {
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+	-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    }
+
+    .tt-hint {
+	color: #999
+    }
+
+    .tt-menu {    /* used to be tt-dropdown-menu in older versions */
+	width: $width;
+	margin-top: 4px;
+	padding: 4px 0;
+	background-color: #fff;
+	border: 1px solid #ccc;
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+        border-radius: 4px;
+	-webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
+	-moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
+        box-shadow: 0 5px 10px rgba(0,0,0,.2);
+    }
+
+    .tt-suggestion {
+	padding: 3px 20px;
+	line-height: 24px;
+    }
+
+    .tt-suggestion.tt-cursor,.tt-suggestion:hover {
+	color: #fff;
+	background-color: #0097cf;
+
+    }
+
+    .tt-suggestion p {
+	margin: 0;
+    }
+
+}
