@@ -15,6 +15,7 @@
     "moment": "~2.10.3",
     "tooltipster": "~3.3.0",
     "twix": "~0.8.1",
-    "seiyria-bootstrap-slider": "~6.0.6"
+    "seiyria-bootstrap-slider": "~6.0.6",
+    "mousetrap": "~1.5.2"
   }
 }
