@@ -40,12 +40,14 @@
     "ember-cli-sri": "^2.1.0",
     "ember-cli-toggle": "1.0.0",
     "ember-cli-tooltipster": "0.1.4",
+    "ember-cli-twitter-typeahead": "0.1.3",
     "ember-cli-uglify": "^1.2.0",
     "ember-composable-helpers": "0.18.0",
     "ember-concurrency": "0.5.17",
     "ember-data": "2.4.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
+    "ember-keyboard-shortcuts": "0.3.0",
     "ember-linkify": "2.0.0",
     "ember-load-initializers": "^0.5.0",
     "ember-math-helpers": "0.0.4",
