@@ -4,6 +4,7 @@ Version 2.1.0 (Unreleased)
 * Add ability to control timestamp formats in session/test view
 * Use full names to refer to users
 * Many improvements to session and test views, including hover pop-ups infos for errors, skips and warnings
+* Added quick-jump dialog to quickly jump to test subjects and users. The dialog opens by pressing '.'
 * Update the document title between routes
 * Support highlighting the test code frame in tracebacks (requires Slash 1.0 and above)
 * Support 'intrastructure' field for denoting the tool used to run sessions
